Fixed scaling issues in top nav bar and fixed position of side nav bar collapse button

--- a/vuexy-html-admin/app-assets/css/components.css
+++ b/vuexy-html-admin/app-assets/css/components.css
@@ -22,7 +22,7 @@ html body .content {
   -webkit-backface-visibility : hidden;
           backface-visibility : hidden;
   min-height : calc(100% - 4rem);
-  margin-left : 260px;
+  margin-left : 330px;
 }
 html body .content.app-content {
   overflow : hidden;
@@ -184,11 +184,11 @@ html .pace .pace-progress {
 */
 @media (min-width: 992px) {
   body .content-right {
-    width : calc(100vw - (100vw - 100%) - 260px);
+    width : calc(100vw - (100vw - 100%) - 330px);
     float : right;
   }
   body .content-left {
-    width : calc(100vw - (100vw - 100%) - 260px);
+    width : calc(100vw - (100vw - 100%) - 330px);
     float : left;
   }
   body .content-detached {
@@ -196,22 +196,22 @@ html .pace .pace-progress {
   }
   body .content-detached.content-right {
     float : right;
-    margin-left : -260px;
+    margin-left : -330px;
   }
   body .content-detached.content-right .content-body {
-    margin-left : calc(260px + 2.2rem);
+    margin-left : calc(330px + 2.2rem);
   }
   body .content-detached.content-left {
     float : left;
-    margin-right : -260px;
+    margin-right : -330px;
   }
   body .content-detached.content-left .content-body {
-    margin-right : calc(260px + 2.2rem);
+    margin-right : calc(330px + 2.2rem);
   }
   .sidebar-right.sidebar-sticky {
     float : right !important;
-    margin-left : -260px;
-    width : 260px !important;
+    margin-left : -330px;
+    width : 330px !important;
     margin-top : 6rem;
   }
 }
@@ -727,7 +727,7 @@ body.fixed-footer footer.footer-dark {
 }
 .main-menu .navbar-header {
   height : 100%;
-  width : 260px;
+  width : 330px;
   height : 5rem;
   position : relative;
   padding : 0.35rem 1rem 0.3rem 1.64rem;
@@ -1281,7 +1281,7 @@ body.fixed-footer .main-menu.menu-fixed {
 }
 
 .width-350 {
-  width : 350px !important;
+  width : 330px !important;
 }
 
 .width-400 {
@@ -1421,7 +1421,7 @@ body.fixed-footer .main-menu.menu-fixed {
 }
 
 .height-350 {
-  height : 350px !important;
+  height : 330px !important;
 }
 
 .height-400 {
